--- a/interface.html
+++ b/interface.html
@@ -1,67 +1,88 @@
-<header class="hero">
-  <h1>My Recipe Box</h1>
-</header>
-.hero {
-  height: 250px;
-  background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836");
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Recipe Box</title>
+  <style>
+    /* Hero Section */
+    .hero {
+      height: 250px;
+      background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836");
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-.hero h1 {
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
-  padding: 10px 20px;
-  border-radius: 8px;
-}
-<img class="recipe-img" src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e" alt="Recipe image">
-.recipe-img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin: 10px 0;
-}
-<section class="gallery">
-  <h2>Cooking Gallery</h2>
-  <div class="gallery-grid">
-    <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd" alt="Salad">
-    <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759" alt="Pasta">
-    <img src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9" alt="Burger">
-    <img src="https://images.unsplash.com/photo-1512058564366-c9e3e0464b01" alt="Dessert">
-  </div>
-</section>
-.gallery {
-  max-width: 900px;
-  margin: 40px auto;
-  text-align: center;
-}
+    .hero h1 {
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+    }
 
-.gallery-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
-}
+    /* Recipe Image */
+    .recipe-img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin: 10px 0;
+    }
 
-.gallery-grid img {
-  width: 100%;
-  height: 160px;
-  object-fit: cover;
-  border-radius: 12px;
-  transition: transform 0.3s ease;
-}
+    /* Gallery */
+    .gallery {
+      max-width: 900px;
+      margin: 40px auto;
+      text-align: center;
+    }
 
-.gallery-grid img:hover {
-  transform: scale(1.05);
-}
-.gallery-grid img {
-  animation: fadeIn 0.8s ease forwards;
-}
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 15px;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+    .gallery-grid img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 12px;
+      transition: transform 0.3s ease;
+      animation: fadeIn 0.8s ease forwards;
+    }
+
+    .gallery-grid img:hover {
+      transform: scale(1.05);
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Hero -->
+  <header class="hero">
+    <h1>My Recipe Box</h1>
+  </header>
+
+  <!-- Recipe Image Example -->
+  <img class="recipe-img" src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e" alt="Recipe image">
+
+  <!-- Cooking Gallery -->
+  <section class="gallery">
+    <h2>Cooking Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd" alt="Salad">
+      <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759" alt="Pasta">
+      <img src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9" alt="Burger">
+      <img src="https://images.unsplash.com/photo-1512058564366-c9e3e0464b01" alt="Dessert">
+    </div>
+  </section>
+
+</body>
+</html>
