--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="gallery-grid">
       <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd" alt="Salad">
       <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759" alt="Pasta">
-      <img src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9" alt="Burger">
-      <img src="https://images.unsplash.com/photo-1512058564366-c9e3e0464b01" alt="Dessert">
+      <img src="https://images.unsplash.om/photo-1499028344343-cd173ffc68a9" alt="Burger">
+      <img src="https://images6.alphacoders.com/101/thumb-1920-1017115.jpg" alt="Dessert">
     </div>
   </section>
 
