--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <div class="gallery-grid">
       <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd" alt="Salad">
       <img src="https://images.unsplash.com/photo-1506084868230-bb9d95c24759" alt="Pasta">
+      <img src="https://tse3.mm.bing.net/th/id/OIP.hiVZAxQMorFfEq1AW3k7XgHaE8?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Burger">
       <img src="dessert.jpg" alt="Dessert">
     </div>
   </section>
