--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<div class="gallery">
+  <img src="/images/photo1.jpg" alt="Photo 1" data-id="1" class="clickable-image">
+  <img src="/images/photo2.jpg" alt="Photo 2" data-id="2" class="clickable-image">
+  <!-- more images -->
+</div>
+
+<!-- Modal/Menu that will slide in -->
+<div id="imageModal" class="modal hidden">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2 id="modalTitle"></h2>
+    <img id="modalImage" src="" alt="">
+    <p id="modalDescription"></p>
+    <!-- Or your full menu here -->
+  </div>
+</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
